--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
+        <compilerVersion>1.7</compilerVersion>
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
